<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <NumberPicker
                android:id="@+id/heightPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:theme="@style/AppTheme.Picker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <NumberPicker
                android:id="@+id/weightPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:theme="@style/AppTheme.Picker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:background="@drawable/result"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vkiScoreTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/vki"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/info_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/score_text_color"
                android:textSize="36sp"
                android:fontFamily="@font/roboto_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/vkiResultTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:paddingTop="16dp"
                    android:text="@string/result"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/resultIcon"
                            android:layout_width="16dp"
                            android:layout_height="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/resultTV"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:textSize="24sp"
                            android:fontFamily="@font/roboto"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/resultContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>